# silo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  cog.toml  deny.toml  dist-workspace.toml  release-plz.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  install_runtime_support.yml
.github/workflows/: ci.yml  pr-title.yml  release-plz.yml  release.yml
src/: app.rs  clipboard.rs  crypto.rs  input.rs  lib.rs  main.rs  money.rs  platform.rs  price.rs  profiles.rs  sync.rs  types.rs  update.rs  vault.rs  worker.rs
src/db/: intents.rs  mod.rs  wallets.rs
src/solana/: mod.rs  reconcile.rs  rpc.rs  tx.rs
src/ui/: format.rs  mod.rs  preview.rs  screens.rs  theme.rs
