[package]
name = "silo"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0-or-later"
publish = false
description = "SOL-only Solana wallet manager TUI"
repository = "https://github.com/265866/silo"
homepage = "https://github.com/265866/silo"
readme = "README.md"

[package.metadata.dist]
dist = true

[dependencies]
anyhow = "1.0.102"
arboard = { version = "3.6.1", default-features = false, features = ["wayland-data-control"] }
argon2 = "0.5.3"
bip39 = { version = "2.2.2", features = ["rand", "zeroize"] }
bs58 = "0.5.1"
chacha20poly1305 = "0.10.1"
crossterm = { version = "0.29", features = ["event-stream"] }
ed25519-dalek = "2.2.0"
futures-util = { version = "0.3.32", default-features = false, features = ["std"] }
hmac = "0.12"
rand = "0.10.1"
ratatui = "0.30.0"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "http2", "json", "charset", "gzip"] }
rusqlite = { version = "0.40.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10"
slip10_ed25519 = "0.1.3"
thiserror = "2.0.18"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
zeroize = { version = "1.8.2", features = ["derive"] }

# Linux-only: read CLOCK_BOOTTIME for a suspend-aware auto-lock idle clock (H7).
# std::time::Instant (CLOCK_MONOTONIC) does NOT advance while the machine is
# suspended, so without this a machine slept past the timeout wouldn't auto-lock.
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
solana-address = "2.6"
solana-compute-budget-interface = "3"
solana-derivation-path = "3.0.0"
solana-hash = "4.4.0"
solana-keypair = { version = "3.1.2", features = ["seed-derivable"] }
solana-message = { version = "4.2.0", features = ["wincode"] }
solana-system-interface = { version = "3.2.0", features = ["bincode"] }
tempfile = "3.27.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
